--- a/public/config/theme.css
+++ b/public/config/theme.css
@@ -1,7 +1,7 @@
 :root {
   --primary: #c1c6cf;
   --primary-text: #1a1a1a;
-  --secondary: #521dff;
+  --secondary: #a189f0;
   --secondary-text: #ffffff;
   --accent: #300090;
   --accent-text: #ffffff;
